Bug 119577 - Sidebar: Escape key press on More Options in panel title bar sends focus to doc view
Summary: Sidebar: Escape key press on More Options in panel title bar sends focus to d...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
5.1.6.2 release
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:6.2.0
Keywords: accessibility
Depends on:
Blocks: Sidebar-Accessibility
  Show dependency treegraph
 
Reported: 2018-08-28 22:10 UTC by Jim Raykowski
Modified: 2019-03-15 08:31 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2018-08-28 22:10:32 UTC
Steps for reproduction in Writer:

1) Open Sidebar(Menu > View > Sidebar or Ctrl+F5)
2) Open Properties Deck (first deck tab button below the menu button in the Sidebar tab bar)
3) Click in the Character panel Font Name box
Cursor and focus is in Font Name box
4) Press Escape key
Focus rectangle is around Character panel title
5) Press Tab key
Focus is on More Options toolbox
6) Press Escape key

Results:
Focus moves to document view

Expected results:
Focus remains on More Options toolbox
Comment 1 Xisco Faulí 2018-08-29 08:43:45 UTC
Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: a922f56cbf25f78534cd2d36bf13a86a4f15d970
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: el-GR (ca_ES.UTF-8); Calc: threaded
Comment 2 Jim Raykowski 2018-08-29 21:42:54 UTC
Here is a patch ignores the Escape key when pressed on the panel title bar More Options toolbox:

https://gerrit.libreoffice.org/#/c/59783/
Comment 3 Commit Notification 2018-08-30 13:44:57 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=b9c38b78025c1abd5bf155c66f878d42c0eccb16

tdf#119577 Ignore escape key press on sidebar toolboxes not handled by

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.