tdf#119577 Ignore escape key press on sidebar toolboxes not handled by

...focus manager.

This prevents escape key press on More Options tool box in some panel
title bars from sending focus to doc view.

Change-Id: Iaac9bf31494e4e35f30350580acaa9f42ead49a0